--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "slugify": "^1.4.6",
     "typescript": "^3.7.5"
   },
   "scripts": {
